

###############################################################################
###############################################################################
##
## CVS
##
###############################################################################
###############################################################################

=head1 CVS HEAD

=head2 New Features

=over 4

=item * 

New B<-F> command line switch to disable processing of any pshrc files. - warp [2001-05-21]

=item *

New builtin command B<modules> to display a list of loaded Perl modules. - warp [2001-05-21]

=back

=head2 Fixes

=over 4

=item *

Major startup speedup

=item *

There was a small, not very often occurring bug related to the usage of
Env::Array, due to a typo

=back


###############################################################################
###############################################################################
##
## 0.009
##
###############################################################################
###############################################################################

=head1 0.009 [2001-01-05]

=head2 New Features

=over 4

=item *

New builtin B<rename> - this does the same as Larry Wall's PPT program
but profits from being integrated into B<psh> (it can use B<psh> subs
and variables for the modification).
- warp [2000-05-01]

=item *

C<Psh::OS::backtick()> now can call and capture the output of
B<psh> builtins on Unix.
- warp [2000-05-01]

=item *

Added new builtin B<fc> which is similar to the command of the same
name from B<bash> - inspired by a command on the SourceForge
message board (and I finally start to like this command ;-).
- warp [2000-05-03]

=item *

The builtin B<history> now also accepts a text as argument. In that
case it will only print commands containing that text.
- warp [2000-07-08]

=item *

The builtin B<fc> now understands the switch C<-p>. Also it's more
behaviour compatible with B<bash>'s B<fc>.

=item *
