@@ -1,11 +1,7 @@
 package Psh::Job;
 
 use strict;
-use vars qw($VERSION);
-
-use Psh::OS;
-
-$VERSION = do { my @r = (q$Revision$ =~ /\d+/g); sprintf "%d."."%02d" x $#r, @r }; # must be all one line, for MakeMaker
+require Psh::OS;
 
 #
 # $job= new Psh::Job( pid, call);
